[gd_scene load_steps=20 format=3 uid="uid://b735dabacjqb1"]

[ext_resource type="Texture2D" uid="uid://b40ykwmg7qc6g" path="res://assets/background.png" id="1_a208h"]
[ext_resource type="Script" path="res://scripts/world.gd" id="1_eajkj"]
[ext_resource type="PackedScene" uid="uid://cl8r4t5s6tii8" path="res://scenes/balloon.tscn" id="2_3q3dm"]
[ext_resource type="PackedScene" uid="uid://dsk0fpfhsol5v" path="res://scenes/loser_screen.tscn" id="4_so66l"]
[ext_resource type="LabelSettings" uid="uid://b773h6lm66p24" path="res://fonts/score.tres" id="4_yosc8"]
[ext_resource type="AudioStream" uid="uid://cf3y3ci2trjt6" path="res://sounds/pop.wav" id="5_6ydnh"]
[ext_resource type="AudioStream" uid="uid://b35pcmbxhdjgu" path="res://sounds/background_music.wav" id="6_n1gtn"]
[ext_resource type="AudioStream" uid="uid://dfnsgyi0hq8gx" path="res://sounds/saw-1.wav" id="7_unefu"]
[ext_resource type="AudioStream" uid="uid://b7ouvglasefuc" path="res://sounds/saw-2.wav" id="8_c2x0e"]
[ext_resource type="AudioStream" uid="uid://cjotkykd7bcwu" path="res://sounds/saw-3.wav" id="9_pipim"]
[ext_resource type="AudioStream" uid="uid://cn8w2anwti6mp" path="res://sounds/saw-4.wav" id="10_d235k"]
[ext_resource type="AudioStream" uid="uid://c8jfd4fiapo0m" path="res://sounds/saw-5.wav" id="11_aawwj"]
[ext_resource type="AudioStream" uid="uid://8rchgams0cxt" path="res://sounds/saw-6.wav" id="12_ubvtx"]
[ext_resource type="AudioStream" uid="uid://dlmsm6cvu6sd4" path="res://sounds/saw-7.wav" id="13_he82u"]
[ext_resource type="AudioStream" uid="uid://bdrbacvf3l42j" path="res://sounds/saw-8.wav" id="14_yqx2r"]
[ext_resource type="AudioStream" uid="uid://jokfkl8cqajr" path="res://sounds/saw-9.wav" id="15_c8sif"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8jpln"]
size = Vector2(48.25, 180)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sf1w8"]
size = Vector2(50.625, 229)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_3yg6f"]
playback_mode = 1
streams_count = 9
stream_0/stream = ExtResource("7_unefu")
stream_0/weight = 1.0
stream_1/stream = ExtResource("8_c2x0e")
stream_1/weight = 1.0
stream_2/stream = ExtResource("9_pipim")
stream_2/weight = 1.0
stream_3/stream = ExtResource("10_d235k")
stream_3/weight = 1.0
stream_4/stream = ExtResource("11_aawwj")
stream_4/weight = 1.0
stream_5/stream = ExtResource("12_ubvtx")
stream_5/weight = 1.0
stream_6/stream = ExtResource("13_he82u")
stream_6/weight = 1.0
stream_7/stream = ExtResource("14_yqx2r")
stream_7/weight = 1.0
stream_8/stream = ExtResource("15_c8sif")
stream_8/weight = 1.0

[node name="World" type="Node2D"]
script = ExtResource("1_eajkj")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1_a208h")
centered = false
metadata/_edit_lock_ = true

[node name="Wall" type="StaticBody2D" parent="."]
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2(23.875, 90)
shape = SubResource("RectangleShape2D_8jpln")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Wall"]
position = Vector2(295.75, 90)
shape = SubResource("RectangleShape2D_8jpln")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Wall"]
position = Vector2(159.5, -23.3125)
rotation = -1.5708
shape = SubResource("RectangleShape2D_sf1w8")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Wall"]
position = Vector2(161, 202.875)
rotation = -1.5708
shape = SubResource("RectangleShape2D_sf1w8")

[node name="Balloon" parent="." instance=ExtResource("2_3q3dm")]
position = Vector2(160, 90)

[node name="SawBlades" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="SawBladeSpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="UI"]
offset_right = 48.0
offset_bottom = 29.0
text = "Score
0"
label_settings = ExtResource("4_yosc8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScore" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -48.0
offset_bottom = 29.0
grow_horizontal = 0
text = "HighScore
0
"
label_settings = ExtResource("4_yosc8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpawnZone" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 20.0
offset_right = 256.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.0901961, 0.105882, 0.0941176)

[node name="LoserScreen" parent="." instance=ExtResource("4_so66l")]

[node name="Sounds" type="Node2D" parent="."]

[node name="PopSFX" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("5_6ydnh")
volume_db = -3.0
pitch_scale = 1.5

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("6_n1gtn")
volume_db = -25.0
autoplay = true

[node name="RandomSawSound" type="AudioStreamPlayer" parent="Sounds"]
stream = SubResource("AudioStreamRandomizer_3yg6f")
volume_db = -25.0
pitch_scale = 2.0

[node name="RandomSawSoundTimer" type="Timer" parent="Sounds"]
wait_time = 2.5
autostart = true

[connection signal="timeout" from="SawBladeSpawnTimer" to="." method="_on_saw_blade_spawn_timer_timeout"]
[connection signal="timeout" from="Sounds/RandomSawSoundTimer" to="." method="_on_random_saw_sound_timer_timeout"]
